# Horizon-mcp

./: .gitignore  Makefile  README.md  pyproject.toml
.cursor/: mcp.json  mcp.json.example  mcp.secrets.json.example
docs/: integration.md
horizon_mcp/: horizon_adapter.py  run_store.py  server.py  service.py
scripts/: check_mcp.py
tests/: test_errors.py  test_run_store.py
