[project]
name = "horizon-mcp"
version = "0.1.0"
description = "MCP server for Horizon (AI-driven tech news pipeline)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "henry-insomniac", email = "lovedangdang@outlook.com" }
]
dependencies = [
  "mcp>=1.0.0",
  "pydantic>=2.9.0",
  "python-dotenv>=1.0.0",
  "httpx>=0.27.0",
  "feedparser>=6.0.11",
  "anthropic>=0.39.0",
  "openai>=1.54.0",
  "google-genai>=0.3.0",
  "rich>=13.9.0",
  "tenacity>=9.0.0",
  "ddgs>=7.0.0",
  "beautifulsoup4>=4.12.0",
  "markdown>=3.10.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0"
]

[project.scripts]
horizon-mcp = "horizon_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["horizon_mcp"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
